# Fastbot_Android

./: .gitignore  README.md  build_native.sh  handbook-cn.md  local.properties  settings.gradle  二开Monkey接入指南.md
monkey/: apk.build.gradle  build.gradle
monkey/src/androidTest/java/com/xinghe/syncore/: LoganUtilsTest.java
monkey/src/main/java/com/android/commands/monkey/: Monkey.java
monkey/src/main/java/com/android/commands/monkey/events/base/: MonkeyActivityEvent.java  MonkeyDataActivityEvent.java  MonkeyHistoryActivityEvent.java  MonkeyRotationEvent.java  MonkeyThrottleEvent.java
monkey/src/main/java/com/android/commands/monkey/events/customize/: RotationEvent.java
monkey/src/main/java/com/android/commands/monkey/framework/: AndroidDevice.java
monkey/src/main/java/com/android/commands/monkey/source/: MonkeySourceApeNative.java  MonkeySourceRandom.java  MonkeySourceScript.java
monkey/src/main/java/com/android/commands/monkey/utils/: Config.java  Logger.java  MonkeyUtils.java
monkey/src/main/java/com/bytedance/fastbot/: AiClient.java
monkey/src/main/java/com/xinghe/syncore/api/: LoganApi.java
monkey/src/main/java/com/xinghe/syncore/logan/: LoganClient.java  LoganUtils.java  RealSendLogRunnable.java
native/: CMakeLists.txt
native/events/: Preference.cpp
test/: abl.strings  awl.strings  max.widget.black
